# pergamon

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
data/netrunner/: load_data.py
games/: agricola.rn  netrunner.rn
src/: main.rs  scripting.rs
src/commands/: lookup.rs  mod.rs
src/games/: mod.rs  netrunner.rs
src/scripting/: mod.rs  regex.rs
