[package]
name = "pergamon"
version = "0.0.1"
authors = ["Matthew Waymost <matthew@waymost.net>"]
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.7"
# crossterm = "0.29"
regex = "1.12"
rune = "0.14.1"
rune-modules = { version = "0.14.1", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serenity = { version = "0.12" }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "sqlite"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
